--- a/form/index.html
+++ b/form/index.html
@@ -4,7 +4,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="login" name="description">
     <meta charset="UTF-8">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
     <title>User login</title>
 </head>
 <body>
